--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.11",
+    "axios": "^1.6.8",
     "chart.js": "^4.4.1",
+    "mime": "^4.0.3",
+    "moment": "^2.30.1",
     "next": "14.1.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
