--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mime": "^4.0.3",
     "moment": "^2.30.1",
     "next": "14.1.0",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
