--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-clientId=
-clientSecret=
+CLIENT_ID=703118193284-uhrkd4ti0laceuogr69qh31cc8aft6s3.apps.googleusercontent.com
+CLIENT_SECRET=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
