--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.11",
+    "@mui/material": "^5.15.17",
     "axios": "^1.6.8",
     "chart.js": "^4.4.1",
     "mime": "^4.0.3",
